[package]
name = "skellige"
version = "0.1.4"
edition = "2018"
authors = ["phR0ze"]
license = "MIT OR Apache-2.0"
description = "Add a little color to the task"
readme = "README.md"
homepage = "https://github.com/phR0ze/skellige"
repository = "https://github.com/phR0ze/skellige"
exclude = [
  "docs",
  "examples",
  ".git",
  ".githooks",
  ".github",
  "tests",
  "benches",
  "target",
  ".vscode"
]

# Higher the opt-level value the slower the compile time
[profile.release]
opt-level = 3   # Optimize for speed over size
lto = true      # Futher assist in optimization

[profile.dev]
opt-level = 0   # Default no optimization

[dependencies]
git2 = "0.13.*"
fungus = "0.1.*"
indicatif = "0.15.*"

# Examples and tests are built with these dependencies
[dev-dependencies]
